--- a/uper/旅人漫步在中国.yaml
+++ b/uper/旅人漫步在中国.yaml
@@ -1,14 +1,14 @@
 author: 旅人漫步在中国
-etag: kLb_tXGvxdZSZvUzHQva6e_Oxbc
+etag: 8QCup7-j3_g_3RPnUraieqeQQBw
 kind: youtube#subscription
 snippet:
   channelId: UCENUJD9ZsD0dDTdUYECoNsw
-  description: I live in China, which is a very large country. From the north to the
-    south and from the west to the east, there are different ethnic groups, climates,
-    landscapes, and cultures. I really enjoy the humanistic and scenic aspects of
-    this place. I will slowly capture my journeys in video and upload them here. If
-    you also enjoy the culture and landscapes of this place, be sure to subscribe
-    to me. Thank you! 🙏
+  description: I live in China, and China is very big.From the south to the north,
+    from the west to the east,there are different cities,different ethnic groups,different
+    climates,different landscapes,and different cultures.I love the unique cultures
+    in different cities,and I will slowly film all the cities I have visited as urban
+    documentaries and upload them here. If you also enjoy the different cities and
+    cultures of China, please subscribe to me. Thank you.
   publishedAt: '2023-09-20T13:46:06.082843Z'
   resourceId:
     channelId: UC5hsjYYm6-Ew_ITnJ0KqFUA
