--- a/uper/普通百姓聊真实的中国.yaml
+++ b/uper/普通百姓聊真实的中国.yaml
@@ -1,13 +1,9 @@
 author: 普通百姓聊真实的中国
-etag: Wu9boewlII-rMu_OqohY5NsdYiA
+etag: rDUKrtSWGma-sdvsp-MBKc-kTA0
 kind: youtube#subscription
 snippet:
   channelId: UCENUJD9ZsD0dDTdUYECoNsw
-  description: '我们联系了全国各地的频道主，这些频道主几乎都是真人出镜，讲诉我们普通老百姓自己的、真实的故事，并让他们将这些故事发布在我们的频道，这些故事是你在CCTV里面看不到的，这些故事是与你们当地电视台报道不一样的，这里才是真实的中国，在这里，读懂真正的中国。
-
-    任何版权争议问题，请迅速联系邮箱：laoliu1925@gmail.com
-
-    有需要商务合作的也请联系上面的邮箱。'
+  description: 介绍中国人的真实生活，一个光怪陆离的社会中一群艰难求生人的生活。
   publishedAt: '2023-01-08T13:58:37.418829Z'
   resourceId:
     channelId: UCU4Cx0vdNhLGEmW-dVTIHdA
