--- a/uper/陈一发儿.yaml
+++ b/uper/陈一发儿.yaml
@@ -1,12 +1,11 @@
 author: 陈一发儿
-etag: JTy6pcVnzWKyo6SqBP0qF6eNH4s
+etag: rct1ZdhP0IaK9HTAo-cFX7dDVBU
 kind: youtube#subscription
 snippet:
   channelId: UCENUJD9ZsD0dDTdUYECoNsw
-  description: "陈一发儿\n\n每周三和周六晚8:30（北京时间）在油管直播，搜索陈一发儿即可看到。\n\n每周一晚上9点看电影：https://www.twitch.tv/thebs_chen\
-    \ \n\n直播录像保存在《油管直播》这个播放列表里。\n\nInstagram：https://www.instagram.com/yifaer_chen/\n\
-    \nSpotify：https://open.spotify.com/artist/10xtjTRMlKZ7aFx6VBQlSj\n\nTaoBao：https://chenyifaer.taobao.com\n\
-    \n开播通知电报群：https://t.me/FaFa67373\n\n投稿邮箱：chenyifaer888@163.com"
+  description: "陈一发儿\n\n每周一、三、六晚8:30（北京时间）在油管直播，搜索陈一发儿即可看到。 \n\n直播录像保存在《油管直播》这个播放列表里。\n\
+    \nInstagram：https://www.instagram.com/yifaer_chen/\n\nSpotify：https://open.spotify.com/artist/10xtjTRMlKZ7aFx6VBQlSj\n\
+    \nTaoBao：https://chenyifaer.taobao.com\n\n开播通知电报群：https://t.me/FaFa67373\n\n投稿邮箱：chenyifaer777@gmail.com"
   publishedAt: '2021-11-11T13:01:28.776017Z'
   resourceId:
     channelId: UC7QVieoTCNwwW84G0bddXpA
