--- a/uper/Andrej Karpathy.yaml
+++ b/uper/Andrej Karpathy.yaml
@@ -1,12 +1,9 @@
 author: Andrej Karpathy
-etag: cYuc9VTHP2Lgt80IbZQFQZ7h5Js
+etag: 9j14Z8IC8-FNmAhA33nNv_k9yas
 kind: youtube#subscription
 snippet:
   channelId: UCENUJD9ZsD0dDTdUYECoNsw
-  description: 'My motivation for creating this channel: https://twitter.com/karpathy/status/1577746577463967745
-
-
-    FAQ
+  description: 'FAQ
 
     Q: How can I pay you? Do you have a Patreon or etc?
 
