--- a/uper/Junchi Cheung.yaml
+++ b/uper/Junchi Cheung.yaml
@@ -1,21 +1,11 @@
 author: Junchi Cheung
-etag: GVHxq2xBEWvY4ikgfMWFYVGfiKs
+etag: uLbcwU5kZ9RSkNlyLfjNL4pWHc8
 kind: youtube#subscription
 snippet:
   channelId: UCENUJD9ZsD0dDTdUYECoNsw
-  description: '如果你有故事想要和我分享，可以联系我：
-
-    【仅限情感生活问题沟通交流，请勿额外骚扰，谢谢】
-
-
-    邮件: junchicheung@hotmail.com
-
-    微信：junchicheungxx
-
-
-    如果你想贊助我的頻道，請去我的PayPal: https://www.paypal.me/chiuxx?locale.x=en_C2
-
-    感谢大家的支持与喜爱❤️'
+  description: "每周日更新！\n  如果你有故事想要和我分享，可以联系我：\n【仅限情感生活问题沟通交流，请勿额外骚扰，谢谢】\n\n邮件: junchicheung@hotmail.com\n\
+    微信：junchicheungxx\n\n⚠️ 本人没有抖音！别被骗到！\n\n如果你想贊助我的頻道，請去我的PayPal: https://www.paypal.me/chiuxx?locale.x=en_C2\n\
+    感谢大家的支持与喜爱❤️"
   publishedAt: '2022-07-17T07:22:38.537166Z'
   resourceId:
     channelId: UCYq_yTLtacrNNF033aVQ_aA
