--- a/uper/不明白播客.yaml
+++ b/uper/不明白播客.yaml
@@ -1,13 +1,14 @@
 author: 不明白播客
-etag: bPSWJMRy5PwS6NFe9tuyv0l6ISc
+etag: ji6NHItgx3xSy2tvy-RVBGsR6nA
 kind: youtube#subscription
 snippet:
   channelId: UCENUJD9ZsD0dDTdUYECoNsw
   description: "当下中国最有趣的谈话都是在私下进行的。《不明白播客》希望把有趣的谈话分享给世界各地的中文听众，在这个黑暗、混乱的时代发出一点光亮和温度。\n\
-    \n这个播客是几位专业新闻记者联合发起的个人项目，不代表我们供职的机构。取名“不明白”是因为在这个魔幻的国度有太多不符合常理值得探究的事情。不明白播客为非盈利项目，不接受赞助和商业合作。\n\
-    \n我们希望每周能就一个话题进行深入、不设限制的讨论。例如，为什么上海的封城措施比武汉更严厉？中国政府执着于清零政策背后的政治逻辑是什么？中俄战略伙伴关系和大翻译运动，哪个更影响中国的国际形象？那些润成功的人都经历了什么？普通人应该关注气候变化吗？中国大力投资硬科技真的会有效吗？网络小说和游戏里反映了怎样的中国社会？关于核战争我们需要知道什么？\n\
-    \n不明白播客官网: http://bumingbai.net \nApple Podcast: http://bit.ly/bmb-apple Google\
-    \ Podcast: http://bit.ly/bmb-google \nSpotify: http://spoti.fi/3fFezK0 GitHub文字版：http://bit.ly/bmb-git"
+    \n这个播客是几位专业新闻记者联合发起的个人项目，不代表我们供职的机构。取名“不明白”是因为在这个魔幻的国度有太多不符合常理值得探究的事情。不明白播客为非盈利项目，不接受商业合作，但是欢迎个人用户捐赠。\n\
+    \n我们希望每周能就一个话题进行深入、不设限制的讨论。例如习近平会带领中国走向何方，中国高层人事还将如何震荡，经济下行会如何影响从企业家到农民工，年轻一代在躺平与反抗之间如何选择。\n\
+    \n这一年来，不明白播客除了传播信息和思想，还成为了让普通中国人发声、连接的一个平台。我们意识到有很多孤独的人在寻找着自己的同类。我们希望这个播客能继续为大家提供有深度和温度的对话，让我们看到彼此，找到彼此。\n\
+    \n不明白播客官网: http://bumingbai.net \nApple Podcast: http://bit.ly/bmb-apple Spotify:\
+    \ http://spoti.fi/3fFezK0 \nGitHub文字版：http://bit.ly/bmb-git"
   publishedAt: '2022-12-18T05:39:30.124553Z'
   resourceId:
     channelId: UCAf2O_wWu1YCS9YLUqnyqDA
