--- a/uper/子君美慧夫妻.yaml
+++ b/uper/子君美慧夫妻.yaml
@@ -1,9 +1,11 @@
 author: 子君美慧夫妻
-etag: Uy-47wiJ4sDzrtOelil90qIlfAs
+etag: EsXXXS3o3SqcB2PkkTkLjZ8aMj0
 kind: youtube#subscription
 snippet:
   channelId: UCENUJD9ZsD0dDTdUYECoNsw
-  description: '好好生活，努力发光 18年广播电视主持人广东仔子君😝和国际礼仪导师的贵州妹子美慧☺️
+  description: 'YouTube唯一帐号，没有小号，不要上当受骗哦！
+
+    好好生活，努力发光 18年广播电视主持人广东仔子君😝和国际礼仪导师的贵州妹子美慧☺️
 
     我们只是平常的小夫妻，谢谢喜欢吖，一起分享开心生活，记录有趣生活！'
   publishedAt: '2023-10-03T02:09:36.064663Z'
