--- a/uper/快乐王国.yaml
+++ b/uper/快乐王国.yaml
@@ -1,9 +1,9 @@
 author: 快乐王国
-etag: -mlplkAEFErZB4dgA0TnYyl-29Y
+etag: p50zE5z0OELmI7yx2Htf3l9N3Ds
 kind: youtube#subscription
 snippet:
   channelId: UCENUJD9ZsD0dDTdUYECoNsw
-  description: 分享多一份快乐
+  description: 这是一个找乐子的广东人
   publishedAt: '2023-10-10T13:29:26.470097Z'
   resourceId:
     channelId: UC720ZT1gC8KHSr-DPG-Yd2w
