--- a/uper/日日生辉.yaml
+++ b/uper/日日生辉.yaml
@@ -1,9 +1,23 @@
 author: 日日生辉
-etag: tpZHhyS374d3bBoNbRSlrWV7FxQ
+etag: -c-mEhHIUSMY6aDkE9qnK3fs9VQ
 kind: youtube#subscription
 snippet:
   channelId: UCENUJD9ZsD0dDTdUYECoNsw
-  description: 一个超级温情的 Story Teller.同时会更新一些自己看到的有价值的视频
+  description: '一个超级温情的 Story Teller.同时会更新一些自己看到的有价值的视频
+
+    歡迎踏進「Yihui 」的奇妙世界!跟我們一同航行，深度感受親情的濃郁、友情的真摯、愛情的浪漫以及滿滿的正能量時刻。只需輕輕點訂閱，即刻開啟與我們的真情共鳴之旅。更有趣味盎然的驚喜與溫馨片段等您探索，讓您一窺中國的絢麗與多姿多彩!#中國#傳統文化
+    #人間真情錄 #日常 #溫馨 #有趣 #美景 #旅遊
+
+    Welcome to the magical world of "Yihui"! Join us on a journey to deeply experience
+    the richness of familial bonds, the sincerity of friendships, the romance of love,
+    and moments brimming with
+
+    positive energy. With just a simple click to subscribe, you can instantly embark
+    on a journey resonating with genuine emotions. Dive into delightful
+
+    surprises and heartwarming snippets awaiting your discovery, giving you a glimpse
+    into China''s vibrant and diverse beauty! #China#TraditionalCulture#TrueEmotionsChronicle
+    #DailyLife #Warmth #Fun#ScenicBeauty #Travel'
   publishedAt: '2023-10-14T05:31:56.053305Z'
   resourceId:
     channelId: UCqjyL1oevcsugm62Fgqpklg
