--- a/uper/普通百姓聊真实的中国.yaml
+++ b/uper/普通百姓聊真实的中国.yaml
@@ -1,9 +1,9 @@
 author: 普通百姓聊真实的中国
-etag: rDUKrtSWGma-sdvsp-MBKc-kTA0
+etag: C6LBzttCTTh-F339otqj7WLv9nI
 kind: youtube#subscription
 snippet:
   channelId: UCENUJD9ZsD0dDTdUYECoNsw
-  description: 介绍中国人的真实生活，一个光怪陆离的社会中一群艰难求生人的生活。
+  description: 介绍中国人的真实生活——一个光怪陆离的社会中一群艰难求生者的生活。
   publishedAt: '2023-01-08T13:58:37.418829Z'
   resourceId:
     channelId: UCU4Cx0vdNhLGEmW-dVTIHdA
