--- a/uper/纯纯甘.yaml
+++ b/uper/纯纯甘.yaml
@@ -1,12 +1,11 @@
 author: 纯纯甘
-etag: iNmo8DLvIK35HXuVnXeSfluYGTk
+etag: aS-OuiTo1ri3-u3bEMNnPl76X9Q
 kind: youtube#subscription
 snippet:
   channelId: UCENUJD9ZsD0dDTdUYECoNsw
-  description: '记录不一样的生活，分享最真实的感受
+  description: '记录不一样的生活，分享最真实的感受。
 
-
-    和我一起去探索人生吧👇
+    【浮生一日】每月25号更新🥰
 
     商务🌏starrank27
 
