--- a/uper/美投讲美股.yaml
+++ b/uper/美投讲美股.yaml
@@ -1,18 +1,9 @@
 author: 美投讲美股
-etag: AlYC9-Ho6qNGRXL_iUr3N8ooqkw
+etag: 1Q3ppYV-5pba2kdO2TrN94ieQZ0
 kind: youtube#subscription
 snippet:
   channelId: UCENUJD9ZsD0dDTdUYECoNsw
-  description: '不硬核不成活！
-
-
-    全网最硬核美股解说，让咱普通投资者也能接触到专业的金融分享
-
-
-    绝非营销号！美投君是个极度热爱金融和美股投资的发烧友，希望让更多人体会投资的魅力
-
-
-    其实美股投资离我们很近，就在我们生活中！'
+  description: YouTube第一美股中文博主
   publishedAt: '2023-07-06T00:35:42.266027Z'
   resourceId:
     channelId: UCBUH38E0ngqvmTqdchWunwQ
