--- a/uper/英语这样用LEC.yaml
+++ b/uper/英语这样用LEC.yaml
@@ -1,5 +1,5 @@
 author: 英语这样用LEC
-etag: iZAH8Anx9nWSBoF95f_K33XAj3o
+etag: Q0d9IjLjPLJhsZJgOSS5exZPrKk
 kind: youtube#subscription
 snippet:
   channelId: UCENUJD9ZsD0dDTdUYECoNsw
@@ -7,11 +7,15 @@ snippet:
 
     在这里你会通过生活中一个个实用主题和具体场景，在文化中学会英语的地道表达，养成英文思维，从此摆脱哑巴英语、中式英语的困扰。
 
-    在这里你也会通过我们每周热点英语新闻的解读迅速提升词汇量以及英语阅读、写作能力，提高英语的同时了解最新时事，一举两得。
+    在这里你也会通过我们每周热点英语新闻的解读，迅速积累提升词汇量，提高英语阅读、听力和写作能力，同时帮你了解全球最新时事，深入理解美国社会政治、经济运行逻辑和文化、健康等各方面资讯。
+
 
     视频每周三、周五、周日更新，谢谢关注！
 
-    如果需要获取视频文字版学习材料：
+    （周三、周日是精讲《华尔街日报》、《彭博社》、《纽约时报》等热点新闻；周五是精读《经济学人》等外刊）
+
+
+    如果需要获取视频文字版复习材料，可以加入会员，微信用户可以通过链接从知识星球加入：
 
     https://www.youtube.com/channel/UCGsT-CwBnWCWW4UWe3QnOvg/join
 
