--- a/uper/3Blue1Brown.yaml
+++ b/uper/3Blue1Brown.yaml
@@ -1,11 +1,12 @@
 author: 3Blue1Brown
-etag: aEiaqwHhgkg7UksLQ_boyUM1bOw
+etag: KzjK4JYeUZnUUZ-VQGomY4-ebqg
 kind: youtube#subscription
 snippet:
   channelId: UCENUJD9ZsD0dDTdUYECoNsw
-  description: '3Blue1Brown, by Grant Sanderson, is some combination of math and entertainment,
-    depending on your disposition. The goal is for explanations to be driven by animations
-    and for difficult problems to be made simple with changes in perspective.
+  description: 'My name is Grant Sanderson. Videos here cover a variety of topics
+    in math, or adjacent fields like physics and CS, all with an emphasis on visualizing
+    the core ideas. To goal is to use animation to help elucidate and motivate otherwise
+    tricky topics, and for difficult problems to be made simple with changes in perspective.
 
 
     For more information, other projects, FAQs, and inquiries see the website: https://www.3blue1brown.com'
