--- a/uper/Prime Minister's Office, Singapore.yaml
+++ b/uper/Prime Minister's Office, Singapore.yaml
@@ -1,10 +1,10 @@
 author: Prime Minister's Office, Singapore
-etag: x3Gkv9m0i7K3c-zHloniKzLuwdk
+etag: 4FGvUttwnEm2LbnSPvgTR28Zfjs
 kind: youtube#subscription
 snippet:
   channelId: UCENUJD9ZsD0dDTdUYECoNsw
   description: Welcome to the Prime Minister's Office YouTube channel. Catch up on
-    Prime Minister Lee Hsien Loong's latest speeches, dialogue Q&As, interviews, press
+    Prime Minister Lawrence Wong's latest speeches, dialogue Q&As, interviews, press
     conferences, National Day Rally speeches and May Day Rally speeches. You can also
     view video highlights from his events and overseas visits.
   publishedAt: '2024-02-24T12:46:27.167104Z'
